--- a/cadastro.html
+++ b/cadastro.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alatsi&display=swap" rel="stylesheet">
+    
+    <link rel="shortcut icon" href="/img/logo.jpeg" type="image/x-icon">
 </head>
 <body>
     <section>
@@ -24,8 +26,8 @@
         <div class="box-form">
             <form action="">
                <div class="box-input">
-                    <input type="text" name="" id="" placeholder="Insira seu Nome">
-                    <input type="text" name="" id="" placeholder="Insira seu CPF">
+                    <input class="nome" type="text" name="" id="" placeholder="Insira seu Nome">
+                    <input class="cpf" type="text" name="" id="" placeholder="Insira seu CPF">
                </div> 
                <div class="box-btn">
                     <button type="submit" id="succes">Realizar Cadastro</button>
@@ -33,5 +35,6 @@
             </form>
         </div>
     </div>
+    <script src="js/cadastro.js"></script>
 </body>
 </html>
