--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alatsi&display=swap" rel="stylesheet">
+
+    <link rel="shortcut icon" href="/img/logo.jpeg" type="image/x-icon">
 </head>
 <body>
     <div class="content-page">
+        <img src="img//logo.jpeg" alt="" style="width: 10rem; height: 10rem; border-radius: 100%;">
         <h1>Bem vindo ao ARANI</h1>
         <div class="box-form">
             <form>
                 <div class="box-input">
-                    <input type="text" name="" id="" placeholder="Insira o seu CPF">
+                    <input type="text" name="cpf" id="cpf" placeholder="Insira o seu CPF">
                 </div>
                 <div class="box-btn">
                     <button type="reset" id="reset">Limpar Campo</button>
@@ -28,5 +31,6 @@
             </form>
         </div>
   </div>
+  <script src="/js/login.js"></script>
 </body>
 </html>
